# cs2_inspect_lite

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
cs2_inspect_lite/: __init__.py  _codec.py  _proto.py  models.py
tests/: test_decode.py
